--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.1"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "app": "nodemon index.js"
+    "app": "node index.js"
   }
 }
